--- a/style4.css
+++ b/style4.css
@@ -40,7 +40,7 @@
     background: #232529;
     color: #FFF;
     justify-content: center;
-
+    margin-left: 115px;
   }
 
 
@@ -60,24 +60,26 @@
   border-radius: 4px ;
   background: white;
 }
-.p{
-  color: #A9A9A9; 
- text-align: center;
- font-family: Sora;
- font-size: 14px;
- font-style: normal;
- font-weight: 400;
-  line-height: normal;
-   display: flex;
-  width: 256px;
-  height: 32px;
-  flex-direction: column;
-  justify-content: center;
-  flex-shrink: 0;
-}
-.img{
+
+.img_content{
+  display: flex;
   width: 80px;
   height: 80px;
   flex-shrink: 0;
   justify-content: center;
+  position: relative;
+  left: 250px;
+  padding: 10px 0px 25px 0px;
+}
+.grey_content{
+  display: flex;
+  width: 583px;
+  height: 32px;
+  flex-direction: column;
+  justify-content: center;
+  color: #A9A9A9;
+  text-align: center;
+  font-family:'Sora', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
 }
